# Moral-Decision-Multi-Agent-Simulator

./: .env.example  .gitignore  README.md  README_RESULTS.md  demo.py  main.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run_CONNECTED.py  run_CONSCIENCE.py  run_EVOLUTION.py  run_ULTRATURBO.py  run_comprehensive_test.py  train_demo.py  train_turbo.py
.github/workflows/: ci.yml
experiments/: experiment_runner.py  llm_comparison.py
src/: __init__.py
src/agents/: __init__.py  llm_agents.py  maddpg.py  moral_agents.py
src/environments/: moral_dilemma_env.py
src/metrics/: moral_metrics.py
src/visualization/: moral_visualizer.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_moral_agents.py  test_moral_dilemma_env.py  test_moral_metrics.py
