[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moral-decision-simulator"
version = "0.2.0"
description = "Multi-agent reinforcement learning environment for studying moral decision-making, featuring Claude and Gemini LLM agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "multi-agent",
    "reinforcement-learning",
    "moral-reasoning",
    "ai-safety",
    "ethics",
    "llm",
    "claude",
    "gemini"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pettingzoo>=1.24.0",
    "gymnasium>=0.28.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "networkx>=3.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
claude = [
    "anthropic>=0.18.0",
]
gemini = [
    "google-generativeai>=0.3.0",
]
llm = [
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
]
all = [
    "moral-decision-simulator[dev,llm]",
]

[project.urls]
Homepage = "https://github.com/yourusername/Moral-Decision-Multi-Agent-Simulator"
Repository = "https://github.com/yourusername/Moral-Decision-Multi-Agent-Simulator"
Issues = "https://github.com/yourusername/Moral-Decision-Multi-Agent-Simulator/issues"

[project.scripts]
moral-sim = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "experiments*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
]

ignore = [
    "E501",   # line too long (handled by black)
    "F401",   # unused imports (re-exports in __init__.py)
    "F841",   # unused variable (often intentional)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "numpy.*",
    "matplotlib.*",
    "plotly.*",
    "pettingzoo.*",
    "gymnasium.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
